# RoTileGame

./: .gitignore  BFS_Lib.cpp  BFS_Lib.h  Benchmarks.txt  BoxesPreferences.cpp  BoxesPreferences.h  CMakeLists.txt  CMakeLists_Work.txt  Common.h  EFS_Lib.cpp  EFS_Lib.h  Efs.cpp  Efs.h  Makefile  RoTile_Game.cpp  RoTile_Game.h
Solver/: A_Star_Lib.cpp  A_Star_Lib.h  BFS_Lib.cpp  BFS_Lib.h  CMakeLists.txt  Common.h
src/: BoxesPreferences.cpp  BoxesPreferences.h  CMakeLists.txt  Frame.cpp  Frame.h  GameStateEnum.h  RoTile_Game.cpp  RoTile_Game.h  Tile.cpp  Tile.h  WaitingWindowX.fl  waiting_window.fl
